--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.4.1",
+    "@types/node": "^18.14.6",
     "nuxt": "^3.2.2",
     "vite-plugin-vue-type-imports": "^0.2.4"
   },
@@ -17,6 +18,8 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.7",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "pinia": "^2.0.32"
   }
 }
